FIxes Broken Dashboard

--- a/src/Churchee.Module.Dashboard/Areas/Dashboard/Index.razor
+++ b/src/Churchee.Module.Dashboard/Areas/Dashboard/Index.razor
@@ -169,6 +169,9 @@
     async Task GetData(int days)
     {
         data = await Mediator.Send(new GetDashboardDataQuery(days));
+
+        StateHasChanged();
+
     }
 
 }
