--- a/src/Churchee.Module.UI/Components/Grid.razor
+++ b/src/Churchee.Module.UI/Components/Grid.razor
@@ -250,7 +250,7 @@
     }
 
 
-    private class ColumnInfo
+    private sealed class ColumnInfo
     {
         public string Width { get; set; } = string.Empty;
 
