--- a/src/Churchee.Module.Tenancy/Areas/Configuration/Churches/Create/Create.razor
+++ b/src/Churchee.Module.Tenancy/Areas/Configuration/Churches/Create/Create.razor
@@ -28,7 +28,8 @@
 
     private async Task ValidSubmitForm()
     {
-        var result = await Mediator.Send(new AddChurchCommand(InputModel.Name, 0), default);
+
+        var result = await Mediator.Send(new AddChurchCommand(InputModel.Name, InputModel.CharityNumber ?? 0), default);
 
         if (result.IsSuccess)
         {
