Fixed Incorrect Page Title

--- a/src/Churchee.Module.Site/Areas/Site/Pages/Pages/Create.razor
+++ b/src/Churchee.Module.Site/Areas/Site/Pages/Pages/Create.razor
@@ -9,7 +9,7 @@
 @using Churchee.Module.UI.Models
 @using Radzen
 
-<PageName Name="Create Page Type"></PageName>
+<PageName Name="Create Page"></PageName>
 
 <Form InputModel="@InputModel" OnSave=@(async () => await ValidSubmitForm()) />
 
