A Number of Minor Fixes

--- a/src/Churchee.Module.Identity/Areas/Account/Pages/Login.cshtml
+++ b/src/Churchee.Module.Identity/Areas/Account/Pages/Login.cshtml
@@ -7,7 +7,10 @@
 
 <section class="login-section bg-gradient-primary-to-secondary">
     <form id="account" method="post" autocomplete="off" class="wrap">
-        <h1>Log in to: <a href="/"><img class="logo" src="/img/churchee-gradient.svg" alt="churchee logo with a blue gradient" /></a></h1>
+        <div class="login-header">
+            <h1>Log in to: <span class="sr-only">Churchee</span></h1>
+            <a href="/" class="logo"><img src="/img/churchee-gradient.svg" alt="churchee logo with a blue gradient" /></a>
+        </div>
         <hr />
 
         <div class="field">
