--- a/src/Churchee.Module.Identity/Areas/Account/Pages/ResetPassword.cshtml
+++ b/src/Churchee.Module.Identity/Areas/Account/Pages/ResetPassword.cshtml
@@ -8,10 +8,9 @@
 
 <section class="login-section bg-gradient-primary-to-secondary">
     <form id="account" method="post" autocomplete="off" class="wrap">
-        
-        <h1><a href="/"><img class="logo" src="/img/churchee-gradient.svg" alt="churchee logo with a blue gradient"></a></h1>
+        <a class="logo" href="/"><img src="/img/churchee-gradient.svg" alt="churchee logo with a blue gradient"></a>
         <hr />
-        <h2>Reset your password</h2>
+        <h1>Reset your password</h1>
 
         @Html.HiddenFor(m => m.Input.Code)
 
