--- a/src/Churchee.Module.Identity/Areas/Account/Pages/ForgotPassword.cshtml
+++ b/src/Churchee.Module.Identity/Areas/Account/Pages/ForgotPassword.cshtml
@@ -9,10 +9,9 @@
 
 <section class="login-section bg-gradient-primary-to-secondary">
     <form method="post" class="wrap">
-
-        <h1><a href="/"><img class="logo" src="/img/churchee-gradient.svg" alt="churchee logo with a blue gradient"></a></h1>
+        <a class="logo" href="/"><img src="/img/churchee-gradient.svg" alt="churchee logo with a blue gradient"></a>
         <hr />
-        <h2>Reset your password</h2>
+        <h1>Reset your password</h1>
 
         <div class="field">
             @Html.LabelFor(m => m.Input.Email)
