--- a/src/Churchee.Module.Identity/Areas/Account/Pages/ResetPasswordConfirmation.cshtml
+++ b/src/Churchee.Module.Identity/Areas/Account/Pages/ResetPasswordConfirmation.cshtml
@@ -9,10 +9,9 @@
 <section class="login-section bg-gradient-primary-to-secondary">
 
     <div class="wrap">
-        <h1><a href="/"><img class="logo" src="/img/churchee-gradient.svg" alt="churchee logo with a blue gradient"></a></h1>
+        <a class="logo" href="/"><img src="/img/churchee-gradient.svg" alt="churchee logo with a blue gradient"></a>
         <hr />
-        <h2>Success!</h2>
-
+        <h1>Success!</h1>
         <div>
             <a href="/account/login" class="btn">Click here to Log in</a>
         </div>
