--- a/src/Churchee.Module.Identity/wwwroot/css/login.css
+++ b/src/Churchee.Module.Identity/wwwroot/css/login.css
@@ -41,13 +41,33 @@ h1 {
   opacity: 0.25;
 }
 .login-section .logo {
+  display: flex;
+}
+.login-section .logo img {
   height: 2.2rem;
+  margin: 0 auto 0;
 }
 .login-section .sub-link {
   margin-top: 1rem;
   display: block;
   text-decoration: none;
   color: #3971c1;
+}
+.login-section h1 {
+  text-align: center;
+  margin-bottom: 2rem;
+  color: #5a7495;
+  font-size: 1.1em;
+}
+.login-section .login-header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.login-section .login-header h1 {
+  text-align: center;
+  font-size: 2.1em;
+  margin: 1rem;
 }
 
 button, .btn {
@@ -153,4 +173,16 @@ h2 {
   margin-bottom: 2rem;
   color: #5a7495;
   font-size: 1.1em;
+}
+
+.sr-only {
+  width: 1px !important;
+  height: 1px !important;
+  padding: 0 !important;
+  margin: -1px !important;
+  overflow: hidden !important;
+  clip: rect(0, 0, 0, 0) !important;
+  white-space: nowrap !important;
+  border: 0 !important;
+  position: absolute !important;
 }
