--- a/src/Churchee.Module.Identity/wwwroot/sass/login.scss
+++ b/src/Churchee.Module.Identity/wwwroot/sass/login.scss
@@ -43,7 +43,12 @@ h1 {
     }
 
     .logo {
+        display: flex;
+    }
+
+    .logo img {
         height: 2.2rem;
+        margin: 0 auto 0;
     }
 
     .sub-link {
@@ -51,6 +56,25 @@ h1 {
         display: block;
         text-decoration: none;
         color: #3971c1;
+    }
+
+    h1 {
+        text-align: center;
+        margin-bottom: 2rem;
+        color: #5a7495;
+        font-size: 1.1em;
+    }
+
+    .login-header {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        h1 {
+            text-align: center;
+            font-size: 2.1em;
+            margin: 1rem;
+        }
     }
 }
 
@@ -160,4 +184,16 @@ h2 {
     margin-bottom: 2rem;
     color: #5a7495;
     font-size: 1.1em;
+}
+
+.sr-only {
+    width: 1px !important;
+    height: 1px !important;
+    padding: 0 !important;
+    margin: -1px !important;
+    overflow: hidden !important;
+    clip: rect(0, 0, 0, 0) !important;
+    white-space: nowrap !important;
+    border: 0 !important;
+    position: absolute !important;
 }
