Various Minor FIxes

--- a/src/Churchee.Module.UI/Components/Breadcrumb.razor
+++ b/src/Churchee.Module.UI/Components/Breadcrumb.razor
@@ -69,7 +69,7 @@
 
             if (crumbs.Any())
             {
-                lastLink = crumbs.Last().Key;
+                lastLink = crumbs.GetLast().Key;
             }
 
             crumbs.Add(new KeyValuePair<string, string>($"{lastLink}/{link}", link.ToTitleCase()));
