--- a/src/Churchee.Module.Events/Areas/Website/Pages/Events/Index.razor
+++ b/src/Churchee.Module.Events/Areas/Website/Pages/Events/Index.razor
@@ -21,7 +21,7 @@
 </SectionContent>
 
 
- <Grid TItem="GetListingQueryResponseItem" IsLoading=isLoading Data=listingData LoadData="@LoadData" ShowEdit="true" ImagePrefix="@(imagePrefix)" OnDelete="OnDelete"></Grid>
+<Grid TItem="GetListingQueryResponseItem" Count="count" IsLoading=isLoading Data=listingData LoadData="@LoadData" ShowEdit="true" ImagePrefix="@(imagePrefix)" OnDelete="OnDelete"></Grid>
 
 @code {
 
@@ -35,6 +35,8 @@
     IEnumerable<GetListingQueryResponseItem> listingData;
 
     bool isLoading = false;
+
+    int count = 0;
 
     async Task OnDelete(GetListingQueryResponseItem item)
     {
@@ -61,6 +63,8 @@
                     orderBy: string.IsNullOrEmpty(args.OrderBy) ? "CreatedDate desc" : args.OrderBy), default);
 
         listingData = result.Data;
+
+        count = result.RecordsTotal;
 
         isLoading = false;
     }
