#194 2FA Name now Churchee

--- a/src/Churchee.Module.Identity/Areas/Profile/Pages/MultiFactorAuthentication.razor
+++ b/src/Churchee.Module.Identity/Areas/Profile/Pages/MultiFactorAuthentication.razor
@@ -195,7 +195,7 @@
     private string GenerateQrCodeUri(string email, string unformattedKey) => string.Format(
             CultureInfo.InvariantCulture,
             AuthenticatorUriFormat,
-            UrlEncoder.Encode("Microsoft.AspNetCore.Identity.UI"),
+            UrlEncoder.Encode("Churchee"),
             UrlEncoder.Encode(email),
             unformattedKey);
 
