--- a/src/Churchee.Module.Identity/Components/Layout/ProfileLayout.razor
+++ b/src/Churchee.Module.Identity/Components/Layout/ProfileLayout.razor
@@ -28,9 +28,16 @@
                 @Body
             </ChildContent>
             <ErrorContent>
-                <p class="alert alert-danger" role="alert">
-                    Oh, dear! Oh, my! - George Takei
-                </p>
+                <div class="alert alert-danger" role="alert">
+
+                    <p>Oh dear...</p>
+
+                    <p>It looks like something has gone wrong...</p>
+
+                    <p>Click <a href="/management">HERE</a> to return to the Dashboard.</p>
+
+                </div>
+
             </ErrorContent>
         </ErrorBoundary>
     </RadzenBody>
