--- a/src/Churchee.Module.Identity/Areas/Account/Pages/LoginWith2fa.cshtml
+++ b/src/Churchee.Module.Identity/Areas/Account/Pages/LoginWith2fa.cshtml
@@ -14,7 +14,11 @@
 
         <form method="post" asp-route-returnUrl="@Model.ReturnUrl" class="wrap">
 
-            <h1>Log in to: <a href="/"><img class="logo" src="/img/churchee-gradient.svg" alt="churchee logo with a blue gradient" /></a></h1>
+            <div class="login-header">
+                <h1>Log in to: <span class="sr-only">Churchee</span></h1>
+                <a href="/" class="logo"><img src="/img/churchee-gradient.svg" alt="churchee logo with a blue gradient"></a>
+            </div>
+
             <hr />
 
             <input asp-for="RememberMe" type="hidden" />
